--- a/Flask-Web-App-Tutorial-main/website/templates/base.html
+++ b/Flask-Web-App-Tutorial-main/website/templates/base.html
@@ -1,92 +1,221 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      crossorigin="anonymous"
-    />
+/* not required */
+*,:active{
+  outline: none;
+}
+*{
+  padding: 0px;
+  margin: 0px;
+}
 
-    <title>{% block title %}Home{% endblock %}</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-          {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          <a class="nav-item nav-link" id="calendar" href="/calendar">Calendar</a>
-          {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-          {% endif %}
-        </div>
-      </div>
-    </nav>
+body{
+  margin: 20px;
+  background-color: #EEEDE9;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-size: 96.5%;
+  font-family: Helvetica, Arial, sans-serif;
+}
 
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-    messages %} {% for category, message in messages %} {% if category ==
-    'error' %}
-    <div class="alert alert-danger alter-dismissable fade show" role="alert">
-      {{ message }}
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% else %}
-    <div class="alert alert-success alter-dismissable fade show" role="alert">
-      {{ message }}
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% endif %} {% endfor %} {% endif %} {% endwith %}
+input{
+  font-family: Helvetica, Arial, sans-serif;
+}
 
-    <div class="container">{% block content %} {% endblock %}</div>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
+h1, h2, h3, h4, h5, p{
+  margin-bottom: 10px;
+}
 
-{% block javascript %}
-    <script type="text/javascript">
-      function deleteNote(noteId) {
-  fetch("/delete-note", {
-    method: "POST",
-    body: JSON.stringify({ noteId: noteId }),
-  }).then((_res) => {
-    window.location.href = "/";
-  });
-  }
-</script>
-{% endblock %}
-  </body>
-</html>
+p{
+  line-height: 20px;
+}
+
+a{
+  text-decoration: none;
+  color: #FF462B;
+}
+
+.clearfix{
+  clear: both;
+}
+
+.animate{
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+
+/* required */
+.calendar{
+  position: absolute;
+  border-radius: 4px;
+  overflow: hidden;
+  width: 800px;
+  height: 450px;
+  left: 50%;
+  margin-left: -400px;
+  margin-top: -225px;
+  top: 50%;
+  background-color: #ffffff;
+  color: #333333;
+}
+
+.calendar h1, .calendar h2{
+  font-weight: 300;
+  font-size: 26px;
+  line-height: 28px;
+  text-transform: uppercase;
+  margin: 0px 0px 20px 0px;
+}
+
+.calendar h1 span{
+  display: block;
+}
+
+.calendar .col{
+  position: relative;
+  float: left;
+  height: 100%;
+}
+
+.calendar .col .content{
+  padding: 40px;
+}
+
+.calendar ul{
+  margin: 0px;
+}
+
+.calendar ul li{
+  list-style: none;
+}
+
+.calendar .leftCol{
+  width: 40%;
+  background-color: #F48989;
+}
+
+.calendar .noteList li{
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.calendar .notes p,
+.calendar .notes input,
+.calendar .noteList li{
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.calendar .notes p{
+  border-bottom: solid 1px rgba(255,255,255,0.4);
+}
+
+.calendar .notes input{
+  background-color: #F48989;
+  color: #ffffff;
+  border: none;
+  width: 200px;
+}
+
+.calendar .addNote,
+.calendar .removeNote{
+  float: right;
+  color: rgba(255,255,255,0.4);
+  font-weight: bold;
+  margin-left: 20px;
+}
+
+.calendar .addNote:hover,
+.calendar .removeNote:hover{
+  color: #ffffff;
+}
+
+.calendar .addNote{
+  font-size: 16px;
+}
+
+.calendar .leftCol h1{
+  color: #ffffff;
+  margin-bottom: 40px;
+}
+
+.calendar .rightCol{
+  width: 60%;
+}
+
+.calendar .rightCol h2{
+  color: #C7BEBE;
+  text-align: right;
+  margin-bottom: 70px;
+}
+
+.calendar .months li,
+.calendar .weekday li,
+.calendar .days li{
+  float: left;
+  text-transform: uppercase;
+}
+
+.calendar .months li a,
+.calendar .weekday li a,
+.calendar .days li a{
+  display: block;
+  color: #747978;
+}
+
+.calendar .months li a{
+  font-size: 10px;
+  color: #C7BEBE;
+  text-align: center;
+  width: 32px;
+  margin-bottom: 20px;
+}
+
+.calendar .months li .selected{
+  font-weight: bold;
+  color: #747978;
+}
+
+.calendar .weekday li a{
+  width: 55px;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+
+.calendar .days li{
+  width: 55px;
+}
+
+.calendar .days li a{
+  width: 36px;
+  height: 24px;
+  text-align: center;
+  margin: auto auto;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 12px;
+  margin-bottom: 10px;
+  padding-top: 10px;
+}
+
+
+.calendar .days li a:hover{
+  background-color: #EEEDE9;
+}
+
+.calendar .days li .selected{
+  background-color: #F5A1A3!important;
+  color: #ffffff;
+}
+
+.calendar .days li .event{
+  color: #F5A1A3;
+}
+
+
+/* placeholder color */
+::-webkit-input-placeholder {color: #ffffff; }
+:-moz-placeholder {color: #ffffff; }
+::-moz-placeholder {color: #ffffff; }
+:-ms-input-placeholder {color: #ffffff; }
